# prototype-cpp-modules

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  prototype_cpp_modules_version.h.in
cmake/: PrototypeCppModulesOptions.cmake
include/prototype_cpp_modules/: prototype_cpp_modules.h  prototype_cpp_modules_version.h
src/: CMakeLists.txt  add.cpp  prototype_cpp_modules.cpp
tests/: CMakeLists.txt  prototype_cpp_modules_tests.cpp
